kubernetes/apps/istio-system/istio/app/extras/headscale-istio-envoyfilter.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/envoyfilter_v1alpha3.json
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: headscale-behind-istio-ingress
  namespace: istio-system
spec:
  workloadSelector:
    # select by label in the same namespace
    labels:
      app: headscale
  configPatches:
    # The first patch adds the lua filter to the listener/http connection manager
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: INSERT_BEFORE
        value: # lua filter specification
          name: envoy.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inline_code: |
              function envoy_on_request(request_handle)
                -- Check if the request path is /web
                if request_handle:headers():get(":path") == "/web" then
                  -- Rewrite the path to /
                  request_handle:headers():replace(":path", "/")
                end
              end
