kubernetes/apps/istio-system/istio/app/extras/authz.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/security.istio.io/authorizationpolicy_v1.json
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authentik-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingress # Changed from istio-ingressgateway
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/authentik/sa/authentik-outpost-proxy
